<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Register of contacts</string>
    <string name="app_long_name">Register of lobbyist contacts</string>

    <!-- Menu Items -->
    <string name="menu_item_contacts">Contacts</string>
    <string name="menu_item_authors">Authors</string>
    <string name="menu_item_search">Search</string>

    <!-- API Toast -->
    <string name="api_toast_offline">You are offline, this action requires internet connection.</string>
    <string name="api_toast_connection_failed">Connection failed, please try again later.</string>

    <!-- Report List -->
    <string name="report_list_button_confirm">Confirm</string>
    <string name="report_list_button_cancel">Cancel</string>

    <!-- Contact List -->
    <string name="contact_list_search">Search</string>

    <!-- Report Detail -->
    <string name="report_detail_author">Author:</string>
    <string name="report_detail_date">Date:</string>
    <string name="report_detail_published">Published:</string>
    <string name="report_detail_received">Received advantages</string>
    <string name="report_detail_provided">Provided advantages</string>

    <!-- Author Detail -->
    <string name="author_detail_name">Name:</string>
    <string name="author_detail_total">Reports:</string>

    <!-- Intro Alert -->
    <string name="intro_alert_title">Warning</string>
    <string name="intro_alert_message">The contents of the registry are test and outdated. For up-to-date content, please go to the Pirate Forum.</string>
    <string name="intro_alert_button_ok">OK</string>

</resources>
