<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/dialog_min_width"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_secondary"
        android:hint="@string/contact_list_search"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_edit_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_list_button_cancel"
            android:theme="@style/FlatButton"
            style="?attr/borderlessButtonStyle"
            />
        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_list_button_confirm"
            android:theme="@style/ColoredButton"
            style="@style/Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>
</LinearLayout>